# SimpleChat

./: CMakeLists.txt
scripts/: build.py
src/: SimpleChat.cpp
src/chat/: IDGenerator.hpp  User.cpp  User.h
src/networking/: Session.hpp  WebSocketServer.cpp  WebSocketServer.h
web/: app.js  index.html
